correção final do capitulo 3

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <script>
         const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
-            slidePerView: 3,
+            slidesPerView: 3,
             pagination: {
                 el: '.swiper-pagination',
                 type: 'bullets',
