--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    
+
     <header class="cabecalho">
 
         <div class="container">
@@ -34,7 +34,9 @@
 
         <ul class="opções">
             <input type="checkbox" id="opções-menu" class="opções__botão">
-            <label for="opções-menu"><li class="opções__item">Categoria</li></label>
+            <label for="opções-menu">
+                <li class="opções__item">Categoria</li>
+            </label>
             <ul class="lista-menu">
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-end</a></li>
@@ -47,9 +49,16 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem  container__imagem-transparente"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"
+                    class="container__imagem  container__imagem-transparente">
+            </a>
+            <a href="#" class="container__link"><img src="img/Compras.svg" alt="Carrinho de compras"
+                    class="container__imagem">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
 
     </header>
@@ -108,48 +117,54 @@
 
         <section class="carrosel">
             <h2 class="carrosel__titulo">Mais vendidos</h2>
-            <div class="swiper">
-                <div class="swiper-pagination"></div>
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="img/ApacheKafka.svg" alt="Livro sobre Apache Kafka">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/Liderança.svg" alt="Livro sobre Liderança">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/Javascript.svg" alt="Livro sobre Javascript">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/Guia Front-end.svg" alt="Livro sobre Front-end">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/Portugol.svg" alt="Livro sobre portugol">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade">
-                    </div>
-                </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
 
-            <div class="card">
-                <div class="card__descrição">
-                    <div class="descrição-card">
-                        <span class="card__descrição__estrelinhas"><img src="img/Estrelinhas.svg" alt="5 estrelas"></span>
-                        <h3 class="descrição__titulo">Autora do Mês</h3>
-                        <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-                        <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End</p>
+            <div class="carrosel__container">
+                <div class="swiper">
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="img/ApacheKafka.svg" alt="Livro sobre Apache Kafka">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/Liderança.svg" alt="Livro sobre Liderança">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/Javascript.svg" alt="Livro sobre Javascript">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/Guia Front-end.svg" alt="Livro sobre Front-end">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/Portugol.svg" alt="Livro sobre portugol">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade">
+                        </div>
                     </div>
-                    <img src="img/Perfil-escritora 1.svg" class="descrição__imagem">
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
-                <div class="card__botões">
-                    <ul class="botões">
-                        <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-                        <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                    </ul>
-                    <a href="#" class="botões__ancora">Saiba mais</a>
+                <!--meu comentário-->
+                <div class="card">
+                    <div class="card__descrição">
+                        <div class="descrição-card">
+                            <span class="card__descrição__estrelinhas"><img src="img/Estrelinhas.svg"
+                                    alt="5 estrelas"></span>
+                            <h3 class="descrição__titulo">Autora do Mês</h3>
+                            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+                            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
+                                Front-End</p>
+                        </div>
+                        <img src="img/Perfil-escritora 1.svg" class="descrição__imagem">
+                    </div>
+                    <div class="card__botões">
+                        <ul class="botões">
+                            <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                            <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras">
+                            </li>
+                        </ul>
+                        <a href="#" class="botões__ancora">Saiba mais</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -189,32 +204,41 @@
             <ul class="lista-rodapé__educação">
                 <li class="item-titulo">Educação</li>
                 <li class="item"><img src="img/Caelum.svg"><a href="#" class="educação__link">Caelum</a></li>
-                <li class="item"><img src="img/CasaDoCodigo.svg"><a href="#" class="educação__link">Casa do Código</a></li>
+                <li class="item"><img src="img/CasaDoCodigo.svg"><a href="#" class="educação__link">Casa do Código</a>
+                </li>
             </ul>
             <ul class="lista-rodapé__educação-online">
                 <li class="item-titulo">Educação Online</li>
                 <li class="item"><img src="img/Alura.svg"><a href="#" class="educação-online__link">Alura</a></li>
-                <li class="item"><img src="img/AluraEmpresas.svg"><a href="#" class="educação-online__link">Alura para empresas</a></li>
-                <li class="item"><img src="img/AluraLatam.svg"><a href="#" class="educação-online__link">Alura LATAM</a></li>
-                <li class="item"><img src="img/AluraStart.svg"><a href="#" class="educação-online__link">Alura Start</a></li>
+                <li class="item"><img src="img/AluraEmpresas.svg"><a href="#" class="educação-online__link">Alura para
+                        empresas</a></li>
+                <li class="item"><img src="img/AluraLatam.svg"><a href="#" class="educação-online__link">Alura LATAM</a>
+                </li>
+                <li class="item"><img src="img/AluraStart.svg"><a href="#" class="educação-online__link">Alura Start</a>
+                </li>
                 <li class="item"><img src="img/MusicDot.svg"><a href="#" class="educação-online__link">MusicDot</a></li>
-                <li class="item"><img src="img/AluraLingua.svg"><a href="#" class="educação-online__link">Alura Língua</a></li>
+                <li class="item"><img src="img/AluraLingua.svg"><a href="#" class="educação-online__link">Alura
+                        Língua</a></li>
                 <li class="item"><img src="img/PM3.svg"><a href="#" class="educação-online__link">PM3</a></li>
             </ul>
             <ul class="lista-rodapé__comunidade">
                 <li class="item-titulo">Comunidade</li>
-                <li class="item"><img src="img/HipstersTech.svg"><a href="#" class="comunidade__link">Hipsters ponto Tech</a></li>
+                <li class="item"><img src="img/HipstersTech.svg"><a href="#" class="comunidade__link">Hipsters ponto
+                        Tech</a></li>
                 <li class="item"><img src="img/Scuba.svg"><a href="#" class="comunidade__link">Scuba Dev</a></li>
-                <li class="item"><img src="img/Layers.svg"><a href="#" class="comunidade__link">Layers ponto Tech</a></li>
+                <li class="item"><img src="img/Layers.svg"><a href="#" class="comunidade__link">Layers ponto Tech</a>
+                </li>
                 <li class="item"><img src="img/LikeABoss.svg"><a href="#" class="comunidade__link">Like a Boss</a></li>
-                <li class="item"><img src="img/CarreiraSemFronteira.svg"><a href="#" class="comunidade__link">Carreira sem fronteira</a></li>
-                <li class="item"><img src="img/HipstersJobs.svg"><a href="#" class="comunidade__link">Hipsters ponto Jobs</a></li>
+                <li class="item"><img src="img/CarreiraSemFronteira.svg"><a href="#" class="comunidade__link">Carreira
+                        sem fronteira</a></li>
+                <li class="item"><img src="img/HipstersJobs.svg"><a href="#" class="comunidade__link">Hipsters ponto
+                        Jobs</a></li>
                 <li class="item"><img src="img/GUJ.svg"><a href="#" class="comunidade__link">GUJ</a></li>
             </ul>
         </div>
     </footer>
 
-    
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
